add beta message

--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -305,7 +305,7 @@ function discard() {
   <table height="100%" width="100%">
     <tr>
       <td>
-        <h1><a href="http://code.google.com/p/blockly/">Blockly</a> &gt; <a href="../index.html">Demos</a> &gt; Code</h1>
+        <h1>BETA of <a href="https://github.com/mapmeld/crowdbotblock">CrowdBotBlock</a> based on Google's <a href="http://code.google.com/p/blockly/">Blockly</a> and Rick Waldron's <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> node module.</h1>
       </td>
     </tr>
     <tr>
