add download and run script

--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -130,11 +130,9 @@ function runJS() {
     type: 'POST',
     url: '/code',
     data: { js: code },
-    success: function(){
-      window.alert('Code will be reviewed');
-    },
     dataType: 'text/javascript'
   });
+  alert("CrowdBot is currently offline. Check http://crowdbotblock.heroku.com for livestream details.");
 }
 
 /**
@@ -336,7 +334,7 @@ function discard() {
               <button onclick="save()">Save to XML</button>
               <button id="fakeload">Load from XML</button>
               <input type="file" id="load" style="display: none;"/>
-              <button class="launch" onclick="runJS()">Run Program</button>
+              <button class="launch" onclick="runJS()">Send Code</button>
             </td>
           </tr>
         </table>
