changing landing page

--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -307,6 +307,12 @@ function discard() {
     button:hover {
       box-shadow: 2px 2px 5px #888;
     }
+    #tab_dart{
+      display: none;
+    }
+    #tab_python{
+      display: none;
+    }
   </style>
 </head>
 <body>
