--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -126,10 +126,16 @@ function runJS() {
   //} catch (e) {
   //  alert('Program error:\n' + e);
   //}
+  var xml = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
+  var data = Blockly.Xml.domToText(xml);
   jQuery.ajax({
     type: 'POST',
     url: '/code',
-    data: { js: code },
+    data: { js: code, xml: data, unique: Math.random() + "-" + Math.random() },
+    success: function(response){
+      console.log('go');
+      window.location = "/livestream";
+    },
     dataType: 'text/javascript'
   });
   alert("CrowdBot is currently offline. Check http://crowdbotblock.heroku.com for livestream details.");
