--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -189,17 +189,20 @@ function save() {
   var xml = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
   var data = Blockly.Xml.domToText(xml);
   var code = Blockly.Generator.workspaceToCode('JavaScript');
+  var codename = prompt("Please name your program:");
+  if(!codename){ return; }
 
   jQuery.ajax({
     type: 'POST',
     url: '/code',
-    data: { js: code, xml: data, unique: Math.random() + "-" + Math.random() },
+    data: { js: code, xml: data, name: codename },
     success: function(response){
       //console.log('go');
       window.location = "/blockly/demos/code/index.html?id=" + response.id;
     },
     error: function(e){
       var response = JSON.parse(e.responseText);
+      alert("Your code is saved to http://crowdbotblock.heroku.com" + "/blockly/demos/code/index.html?id=" + response.id);
       window.location = "/blockly/demos/code/index.html?id=" + response.id;
     },
     dataType: 'text/javascript'
@@ -354,6 +357,9 @@ function discard() {
       display: none;
     }
     #tab_python{
+      display: none;
+    }
+    #fakeload{
       display: none;
     }
   </style>
