--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -131,7 +131,7 @@ function runJS() {
   jQuery.ajax({
     type: 'POST',
     url: '/code',
-    data: { js: code, xml: data, unique: Math.random() + "-" + Math.random() },
+    data: { js: code, xml: data, name: $("#codename").val() },
     success: function(response){
       //console.log('go');
       window.location = "/livestream?id=" + response.id;
@@ -169,6 +169,7 @@ function restore_blocks() {
     // attempt load from server
     $.getJSON("/code?id=" + getURLParameter("id"), function(data){
       console.log(data.xml);
+      $("#codename").val(data.name);
       var xml = Blockly.Xml.textToDom(data.xml);
       Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml);
     });
@@ -385,7 +386,7 @@ function discard() {
             <td id="tab_xml" class="taboff" onclick="tabClick(this.id)">XML</td>
             <td class="tabmax">
               <label>Program Name:</label>
-              <input id="codename"/>
+              <input id="codename" type="text" value=""/>
               <button onclick="discard()">Clear</button>
               <button onclick="save()">Save to XML</button>
               <button id="fakeload">Load from XML</button>
