highlight program name

--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -386,7 +386,7 @@ function discard() {
             <td id="tab_xml" class="taboff" onclick="tabClick(this.id)">XML</td>
             <td class="tabmax">
               <label>Program Name:</label>
-              <input id="codename" type="text" value=""/>
+              <input id="codename" type="text" value="" style="background-color:#7fff00;"/>
               <button onclick="discard()">Clear</button>
               <button onclick="save()">Save to XML</button>
               <button id="fakeload">Load from XML</button>
