remove moz links

--- a/public/blockly/demos/code/index.html
+++ b/public/blockly/demos/code/index.html
@@ -378,7 +378,7 @@ function discard() {
   <table height="100%" width="100%">
     <tr>
       <td>
-        <h2>BETA of <a href="https://github.com/mapmeld/crowdbotblock">CrowdBotBlock</a> based on Google's <a href="http://code.google.com/p/blockly/">Blockly</a> and Rick Waldron's <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> node module.</h2>
+        <h3><a href="https://github.com/mapmeld/crowdbotblock">CrowdBotBlock</a> based on Google's <a href="http://code.google.com/p/blockly/">Blockly</a> and Rick Waldron's <a href="https://github.com/rwldrn/johnny-five">johnny-five</a> node module.</h3>
       </td>
     </tr>
     <tr>
