--- a/public/blockly/demos/code/frame.html
+++ b/public/blockly/demos/code/frame.html
@@ -3,14 +3,6 @@
   <meta charset="utf-8">
   <title>Blockly Demo: Code</title>
   <script type="text/javascript" src="../blockly_compressed.js"></script>
-  <script type="text/javascript" src="../../generators/dart.js"></script>
-  <script type="text/javascript" src="../../generators/dart/control.js"></script>
-  <script type="text/javascript" src="../../generators/dart/logic.js"></script>
-  <script type="text/javascript" src="../../generators/dart/math.js"></script>
-  <script type="text/javascript" src="../../generators/dart/text.js"></script>
-  <script type="text/javascript" src="../../generators/dart/lists.js"></script>
-  <script type="text/javascript" src="../../generators/dart/variables.js"></script>
-  <script type="text/javascript" src="../../generators/dart/procedures.js"></script>
   <script type="text/javascript" src="../../generators/javascript.js"></script>
   <script type="text/javascript" src="../../generators/javascript/control.js"></script>
   <script type="text/javascript" src="../../generators/javascript/logic.js"></script>
@@ -19,14 +11,16 @@
   <script type="text/javascript" src="../../generators/javascript/lists.js"></script>
   <script type="text/javascript" src="../../generators/javascript/variables.js"></script>
   <script type="text/javascript" src="../../generators/javascript/procedures.js"></script>
-  <script type="text/javascript" src="../../generators/python.js"></script>
-  <script type="text/javascript" src="../../generators/python/control.js"></script>
-  <script type="text/javascript" src="../../generators/python/logic.js"></script>
-  <script type="text/javascript" src="../../generators/python/math.js"></script>
-  <script type="text/javascript" src="../../generators/python/text.js"></script>
-  <script type="text/javascript" src="../../generators/python/lists.js"></script>
-  <script type="text/javascript" src="../../generators/python/variables.js"></script>
-  <script type="text/javascript" src="../../generators/python/procedures.js"></script>
+
+  <script type="text/javascript" src="../../generators/wiring.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/control.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/logic.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/math.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/text.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/lists.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/variables.js"></script>
+  <script type="text/javascript" src="../../generators/wiring/procedures.js"></script>
+  
   <script type="text/javascript" src="../../language/en/_messages.js"></script>
   <script type="text/javascript" src="../../language/common/control.js"></script>
   <script type="text/javascript" src="../../language/common/logic.js"></script>
